tests/should-fail/semantics/return-null-as-int.j
function test takes nothing returns integer
    return null
endfunction

